login/logout page, handlebar still working

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -35,7 +35,7 @@
     </ul>
 </header>
 
-</div>
+{{!-- </div>
 <div class="button">
     <input type="text" class="form-control search-query">
     <span class="input-group-btn">
@@ -49,7 +49,7 @@
             <a href="./HTML/search.html" target="_self"><button type="submit" class="btn">Sign in</button>
             </a>
           
-  </div>
+  </div> --}}
 
 <div class="row">
   <div class="side">
