homepage handlepage jacked

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,97 +1,360 @@
-* {
-    box-sizing: border-box;
+body {
+  color: #777;
+}
+
+.pure-img-responsive {
+  max-width: 100%;
+  height: auto;
+}
+
+/*
+Add transition to containers so they can push in and out.
+*/
+#layout,
+#menu,
+.menu-link {
+  -webkit-transition: all 0.2s ease-out;
+  -moz-transition: all 0.2s ease-out;
+  -ms-transition: all 0.2s ease-out;
+  -o-transition: all 0.2s ease-out;
+  transition: all 0.2s ease-out;
+}
+
+/*
+This is the parent `<div>` that contains the menu and the content area.
+*/
+#layout {
+  position: relative;
+  left: 0;
+  padding-left: 0;
+}
+  #layout.active #menu {
+      left: 150px;
+      width: 150px;
   }
-  
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
+
+  #layout.active .menu-link {
+      left: 150px;
   }
-  
-  .header {
-    padding: .4px;
-    text-align: center;
-    background: #ffffff;
-    color: rgb(47, 45, 45);
-    font-style: oblique;
-  }
-  
+/*
+The content `<div>` is where all your content goes.
+*/
+.content {
+  margin: 0 auto;
+  padding: 0 2em;
+  max-width: 800px;
+  margin-bottom: 50px;
+  line-height: 1.6em;
+}
+
+.header {
+   margin: 0;
+   color: #333;
+   text-align: center;
+   padding: 2.5em 2em 0;
+   border-bottom: 1px solid #eee;
+}
   .header h1 {
-    font-size: 40px;
-    padding: 2rem;
-    opacity: 90%;
-    background-image: url("/assets/header.png")
+      margin: 0.2em 0;
+      font-size: 3em;
+      font-weight: 300;
   }
-  .button {
-    background-color: #ce949c;
-    border: none;
-    color: white;
-    padding: 20px 22rem;
-    text-align: right;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    flex-wrap: wrap;
-
+   .header h2 {
+      font-weight: 300;
+      color: #ccc;
+      padding: 0;
+      margin-top: 0;
   }
 
-  .btn {
-    color: rgb(255, 255, 255);
-    background-color: rgb(0, 0, 0);
+.content-subhead {
+  margin: 50px 0 20px 0;
+  font-weight: 300;
+  color: #888;
+}
 
-  }
-   
-  .row {  
-    display: -ms-flexbox; /* IE10 */
-    display: flex;
-    -ms-flex-wrap: wrap; /* IE10 */
-    flex-wrap: wrap;
+
+
+/*
+The `#menu` `<div>` is the parent `<div>` that contains the `.pure-menu` that
+appears on the left side of the page.
+*/
+
+#menu {
+  margin-left: -150px; /* "#menu" width */
+  width: 150px;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  z-index: 1000; /* so the menu or its navicon stays above all content */
+  background: #191818;
+  overflow-y: auto;
+}
+  /*
+  All anchors inside the menu should be styled like this.
+  */
+  #menu a {
+      color: #999;
+      border: none;
+      padding: 0.6em 0 0.6em 0.6em;
   }
 
-  .side {
-    -ms-flex: 30%; /* IE10 */
-    flex: 10%;
-    background-color: #fbfbfb;
-    padding: 8px;
+  /*
+  Remove all background/borders, since we are applying them to #menu.
+  */
+   #menu .pure-menu,
+   #menu .pure-menu ul {
+      border: none;
+      background: transparent;
   }
-  
-  .main {   
-    -ms-flex: 70%; /* IE10 */
-    flex: 70%;
-    background-color: white;
-    padding: 20px;
+
+  /*
+  Add that light border to separate items into groups.
+  */
+  #menu .pure-menu ul,
+  #menu .pure-menu .menu-item-divided {
+      border-top: 1px solid #333;
   }
-  
-  .fakeimg {
-    background-color: rgb(114, 96, 96);
-    width: 100%;
-    padding: 20px;
+      /*
+      Change color of the anchor links on hover/focus.
+      */
+      #menu .pure-menu li a:hover,
+      #menu .pure-menu li a:focus {
+          background: #333;
+      }
+
+  /*
+  This styles the selected menu item `<li>`.
+  */
+  #menu .pure-menu-selected,
+  #menu .pure-menu-heading {
+      background: #1f8dd6;
   }
-  
-  .footer {
-    padding: 10px;
-    text-align: center;
-    background: #ddd;
+      /*
+      This styles a link within a selected menu item `<li>`.
+      */
+      #menu .pure-menu-selected a {
+          color: #fff;
+      }
+
+  /*
+  This styles the menu heading.
+  */
+  #menu .pure-menu-heading {
+      font-size: 110%;
+      color: #fff;
+      margin: 0;
   }
-  
-  /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 700px) {
-    .row {   
-      flex-direction: column;
-    }
+
+/* -- Dynamic Button For Responsive Menu -------------------------------------*/
+
+/*
+The button to open/close the Menu is custom-made and not part of Pure. Here's
+how it works:
+*/
+
+/*
+`.menu-link` represents the responsive menu toggle that shows/hides on
+small screens.
+*/
+.menu-link {
+  position: fixed;
+  display: block; /* show this only on small screens */
+  top: 0;
+  left: 0; /* "#menu width" */
+  background: #000;
+  background: rgba(0,0,0,0.7);
+  font-size: 10px; /* change this value to increase/decrease button size */
+  z-index: 10;
+  width: 2em;
+  height: auto;
+  padding: 2.1em 1.6em;
+}
+
+  .menu-link:hover,
+  .menu-link:focus {
+      background: #000;
   }
-  
-  /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
-  @media screen and (max-width: 400px) {
-    .navbar a {
-      float: none;
+
+  .menu-link span {
+      position: relative;
+      display: block;
+  }
+
+  .menu-link span,
+  .menu-link span:before,
+  .menu-link span:after {
+      background-color: #fff;
+      pointer-events: none;
       width: 100%;
-    }
+      height: 0.2em;
   }
-  @media screen and (max-width: 400px) {
-.btn a {
-  
-    float: none;
-    width: 100%;
 
-} 
+      .menu-link span:before,
+      .menu-link span:after {
+          position: absolute;
+          margin-top: -0.6em;
+          content: " ";
+      }
+
+      .menu-link span:after {
+          margin-top: 0.6em;
+      }
+
+
+/* -- Responsive Styles (Media Queries) ------------------------------------- */
+* {
+box-sizing: border-box;
+}
+
+body {
+font-family: Arial, Helvetica, sans-serif;
+margin: 0;
+}
+
+.header {
+padding: .4px;
+text-align: center;
+background: #ffffff;
+color: rgb(47, 45, 45);
+font-style: oblique;
+}
+
+.header h1 {
+font-size: 40px;
+padding: 2rem;
+opacity: 90%;
+background-image: url("/assets/header.png")
+}
+.button {
+background-color: #ce949c;
+border: none;
+color: white;
+padding: 20px 22rem;
+text-align: right;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+flex-wrap: wrap;
+
+}
+
+.btn {
+color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 0);
+
+}
+
+.row {  
+display: -ms-flexbox; /* IE10 */
+display: flex;
+-ms-flex-wrap: wrap; /* IE10 */
+flex-wrap: wrap;
+}
+
+/* added formatting for content */
+.side {
+-ms-flex: 30%; /* IE10 */
+flex: 10%;
+background-color: #fbfbfb;
+}
+
+/* ADDED CSS FOR NAVBARS */
+.navbar {
+display:flex;
+align-items: center;
+min-height: 60px;
+background-color: #ce949c;
+justify-content: right;
+padding-left: 50px;
+}
+
+.navbar2 {
+display:flex;
+justify-content: right;
+align-items: center;
+min-height: 40px;
+background-color: #ce949c;
+padding-right: 10px;
+}
+/* //ADDED IN FOR THE HOMEPAGE CSS */
+.main {   
+display: flex;
+-ms-flex: 70%; /* IE10 */
+flex: 70%;
+margin: 20px 5px 20px 5px;
+background-color: rgb(114, 96, 96);
+width: 100%;
+height:fit-content;
+flex-direction: column;
+}
+
+.postinfo {
+height: fit-content;
+width: 100%;
+border-bottom: black solid;
+padding: 0px 0px 10px 10px;
+}
+
+.bottombar {
+display:flex;
+max-height: 40px;
+width: 100%;
+border-top: black solid;
+}
+
+.upvotes{
+max-width: inherit;
+max-height: inherit;
+
+}
+/*ALL FOR HOMEPAGE CSS  */
+
+.fakeimg {
+background-color: rgb(114, 96, 96);
+width: 100%;
+padding: 20px;
+}
+
+/*
+Hides the menu at `48em`, but modify this based on your app's needs.
+*/
+@media (min-width: 48em) {
+
+  .header,
+  .content {
+      padding-left: 2em;
+      padding-right: 2em;
   }
+
+  #layout {
+      padding-left: 150px; /* left col width "#menu" */
+      left: 0;
+  }
+  #menu {
+      left: 150px;
+  }
+
+  .menu-link {
+      position: fixed;
+      left: 150px;
+      display: none;
+  }
+
+  #layout.active .menu-link {
+      left: 150px;
+  }
+}
+
+@media (max-width: 48em) {
+  /* Only apply this when the window is small. Otherwise, the following
+  case results in extra padding on the left:
+      * Make the window small.
+      * Tap the menu to trigger the active state.
+      * Make the window large again.
+  */
+  #layout.active {
+      position: relative;
+      left: 150px;
+  }
+}
