--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,92 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 
-<link rel="stylesheet" href="/css/styles.css">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
+  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css"
+    integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous">
 
-<title>BW</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>BW</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
-</header>
-<div class="header">
-  <h1>Burn Whisper</h1>
-  <p>Home to the worlds ultimate gossip forum </p>
-</div>
-</header>
-
-<div class="navbar pure-menu pure-menu-horizontal pure-menu-scrollable">
-  <ul class="pure-menu-list">
-    <li class="pure-menu-item">
-      <a href="#" class="pure-menu-link">Home</a>
-    </li>
-    <li class="pure-menu-item">
-      <a href="#" class="pure-menu-link">Profile</a>
-    </li>
-    <li class="pure-menu-item">
-      <a href="#" class="pure-menu-link">Feed</a>
-    </li>
-    <li class="pure-menu-item">
-      <a href="#" class="pure-menu-link">Schools</a>
-    </li>
-    
-    <a href="#" class="pure-menu-link pure-menu-heading">Login</a>
-    </ul>
-</header>
-
-</div>
-<div class="navbar2 button">
-  <input type="text" class="form-control search-query">
-  <span class="input-group-btn">
-      <button class="btn">Search</button>
-  </span>
-</div>
-
-<div class="row">
-  <div class="side">
-    <h2>Search Schools</h2>
-    <h5></h5>
-    <div class="fakeimg" style="height:200px;"></div>
-    <p></p>
-    <h3></h3>
-    <p></p>
-    <div class="fakeimg" style="height:60px;">UCR</div><br>
-    <div class="fakeimg" style="height:60px;">UCLA</div><br>
-    <div class="fakeimg" style="height:60px;">USC</div>
+  </header>
+  <div class="header">
+    <h1>Burn Whisper</h1>
+    <p>Home to the worlds ultimate gossip forum </p>
   </div>
-  {{!-- {{#if !logged_in}}
+  </header>
+
+  <div class="navbar pure-menu pure-menu-horizontal pure-menu-scrollable">
+    <ul class="pure-menu-list">
+      <li class="pure-menu-item">
+        <a href="#" class="pure-menu-link">Home</a>
+      </li>
+      <li class="pure-menu-item">
+        <a href="#" class="pure-menu-link">Profile</a>
+      </li>
+      <li class="pure-menu-item">
+        <a href="#" class="pure-menu-link">Feed</a>
+      </li>
+      <li class="pure-menu-item">
+        <a href="#" class="pure-menu-link">Schools</a>
+      </li>
+
+      <a href="/login" class="pure-menu-link pure-menu-heading">Login</a>
+    </ul>
+    </header>
+
+  </div>
+  <div class="navbar2 button">
+    <input type="text" class="form-control search-query">
+    <span class="input-group-btn">
+      <button class="btn">Search</button>
+    </span>
+  </div>
+
+  <div class="row">
+    <div class="side">
+      <h2>Search Schools</h2>
+      <h5></h5>
+      <div class="fakeimg" style="height:200px;"></div>
+      <p></p>
+      <h3></h3>
+      <p></p>
+      <div class="fakeimg" style="height:60px;">UCR</div><br>
+      <div class="fakeimg" style="height:60px;">UCLA</div><br>
+      <div class="fakeimg" style="height:60px;">USC</div>
+    </div>
+    {{!-- {{#if !logged_in}}
     <div class="main">
-      <h2 class = "postinfo"></h2>
+      <h2 class="postinfo"></h2>
       <p>Please Log In to see posts</p>
     </div>
-  {{/if}} --}}
-  {{{body}}}
-</body>
-</html>
-
-</div>
-<div class="navbar2 button">
-  <input type="text" class="form-control search-query">
-  <span class="input-group-btn">
-      <button class="btn">Search</button>
-  </span>
-</div>
-
-<div class="row">
-  <div class="side">
-    <h2>Search Schools</h2>
-    <h5></h5>
-    <div class="fakeimg" style="height:200px;"></div>
-    <p></p>
-    <h3></h3>
-    <p></p>
-    <div class="fakeimg" style="height:60px;">UCR</div><br>
-    <div class="fakeimg" style="height:60px;">UCLA</div><br>
-    <div class="fakeimg" style="height:60px;">USC</div>
-  </div>
-  {{{body}}}
+    {{/if}} --}}
+    {{{body}}}
 </body>
 </html>
