--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -31,6 +31,13 @@
         <input class="form-input" type="password" id="password-signup" />
       </div>
       <div class="form-group">
+        <label for="bio-text" class="col-sm-2 control-label text-warning">Bio:</label>
+        <div class="col-sm-10">
+          <textarea type="text" class="form-control bg-dark text-white" rows="3" id="bio-signup"
+            placeholder="Optional"></textarea>
+        </div>
+      </div>
+      <div class="form-group">
         <button class="btn btn-primary" type="submit">signup</button>
       </div>
     </form>
