--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,9 +1,9 @@
 {{#each posts as |post|}}
 <div class="main">
-   <h2 class = "postinfo">{{post.user_id}}</h2>
-   <p>{{post.post_text}}</p>
+  <h2 class = "postinfo"></h2>
+   <p class="post_text"></p>
     <div class = "bottombar">
-      <input type ="image" src="./thumbs up.jpg" name="Upvote Button" class="upvotes" id="upvoteBtn">
+      <input type ="image" src="../../assets/thumbs up.jpg" name="Upvote Button" class="upvotes" id="upvoteBtn">
       </div>
     </div>
 {{/each}}
