--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,38 +1,30 @@
-<form class="form-horizontal" id="form-signup">
-
-  <div class="form-group">
-    <label for="username-signup" class="col-sm-2 control-label text-warning">Username:</label>
-    <div class="col-sm-4">
-      <input type="text" class="form-control bg-dark text-white" id="username-signup" placeholder="Required" />
-    </div>
+ <div class="login-card">
+    <h2 class="page-title">Signup</h2>
+    <form class="form signup-form">
+      <div class="form-group">
+        <label for="username-signup">Username:</label>
+        <input class="form-input" type="text" id="username-signup" />
+      </div>
+      <div class="form-group">
+        <label for="email-signup">Email:</label>
+        <input class="form-input" type="text" id="email-signup" />
+      </div>
+      <div class="form-group">
+        <label for="password-signup">Password:</label>
+        <input class="form-input" type="password" id="password-signup" />
+      </div>
+      <div class="form-group">
+        <label for="bio-text" class="col-sm-2 control-label text-warning">Bio:</label>
+        <div class="col-sm-10">
+          <textarea type="text" class="form-control bg-dark text-white" rows="3" id="bio-signup"
+            placeholder="Optional"></textarea>
+        </div>
+      </div>
+      <div class="form-group">
+        <button class="btn btn-primary" type="submit">signup</button>
+      </div>
+    </form>
   </div>
+</div>
 
-  <div class="form-group">
-    <label for="email-signup" class="col-sm-2 control-label text-warning">Email:</label>
-    <div class="col-sm-4">
-      <input type="email" class="form-control bg-dark text-white" id="email-signup" placeholder="Required" />
-    </div>
-  </div>
-
-  <div class="form-group">
-    <label for="password-signup" class="col-sm-2 control-label text-warning">Password:</label>
-    <div class="col-sm-4">
-      <input type="password" class="form-control bg-dark text-white" id="password-signup" placeholder="Required" />
-    </div>
-  </div>
-
-  {{!-- <div class="form-group">
-    <label for="bio-text" class="col-sm-2 control-label text-warning">Bio:</label>
-    <div class="col-sm-10">
-      <textarea type="text" class="form-control bg-dark text-white" rows="3" id="bio-signup"
-        placeholder="Optional"></textarea>
-    </div>
-  </div> --}}
-
-  <div>
-    <button type="submit" class="btn btn-warning" id="btn-signup">Sign-up</button>
-  </div>
-
-</form>
-
-<script src="/js/signup.js"></script>
+<script src=".js/signup.js"></script>
