resolving conflict merge

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+
   </header>
   <div class="header">
     <h1>Burn Whisper</h1>
@@ -66,5 +67,85 @@
     </div>
     {{/if}} --}}
     {{{body}}}
+
+</header>
+<div class="header">
+  <h1>Burn Whisper</h1>
+  <p>Home to the worlds ultimate gossip forum </p>
+</div>
+</header>
+
+<div class="navbar pure-menu pure-menu-horizontal pure-menu-scrollable">
+  <ul class="pure-menu-list">
+    <li class="pure-menu-item">
+      <a href="#" class="pure-menu-link">Home</a>
+    </li>
+    <li class="pure-menu-item">
+      <a href="#" class="pure-menu-link">Profile</a>
+    </li>
+    <li class="pure-menu-item">
+      <a href="#" class="pure-menu-link">Feed</a>
+    </li>
+    <li class="pure-menu-item">
+      <a href="#" class="pure-menu-link">Schools</a>
+    </li>
+    
+    <a href="#" class="pure-menu-link pure-menu-heading">Login</a>
+    </ul>
+</header>
+
+</div>
+<div class="navbar2 button">
+  <input type="text" class="form-control search-query">
+  <span class="input-group-btn">
+      <button class="btn">Search</button>
+  </span>
+</div>
+
+<div class="row">
+  <div class="container1">
+
+  <div class="side">
+    <h2>Search Schools</h2>
+    <h5></h5>
+    <div class="fakeimg" style="height:200px;"></div>
+    <p></p>
+    <h3></h3>
+    <p></p>
+    <div class="fakeimg" style="height:60px;">UCR</div><br>
+    <div class="fakeimg" style="height:60px;">UCLA</div><br>
+    <div class="fakeimg" style="height:60px;">USC</div>
+  </div>
+  </div>
+  {{!-- {{#if !logged_in}}
+  <div class="container2">
+  <div class="post_feed">
+    <h2>Your Feed:</h2>
+    <div class="main">
+  <h2 class = "postinfo"></h2>
+   <p class="post_text">Please Log In to see posts</p>
+    <div class = "bottombar">
+      <input type ="image" src="../../assets/thumbs up.jpg" name="Upvote Button" class="upvotes" id="upvoteBtn">
+      </div>
+    </div>
+  </div>
+  </div>
+
+
+  <div class="container2">
+  <div class="post_feed">
+    <h2>Your Feed:</h2>
+  </div>
+  {{!-- {{{body}}} --}}
+  <div class="main">
+  <h2 class = "postinfo"></h2>
+   <p class="post_text"></p>
+    <div class = "bottombar">
+      <input type ="image" src="../../assets/thumbs up.jpg" name="Upvote Button" class="upvotes" id="upvoteBtn">
+      </div>
+    </div>
+  </div>
+
+
 </body>
 </html>
