made changes to logged in info

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,14 +28,11 @@
       <li class="pure-menu-item">
         <a href="#" class="pure-menu-link">Profile</a>
       </li>
-      <li class="pure-menu-item">
-        <a href="#" class="pure-menu-link">Feed</a>
-      </li>
-      <li class="pure-menu-item">
-        <a href="#" class="pure-menu-link">Schools</a>
-      </li>
-
+{{#if logged_in}}
+    <button class="pure-menu-link pure-menu-heading">Logout</button>
+{{else}}
       <a href="/login" class="pure-menu-link pure-menu-heading">Login</a>
+{{/if}}
     </ul>
     </header>
 
@@ -62,33 +59,35 @@
     <div class="fakeimg" style="height:60px;">USC</div>
   </div>
   </div>
-  {{!-- {{#if !logged_in}}
   <div class="container2">
   <div class="post_feed">
     <h2>Your Feed:</h2>
-    <div class="main">
-  <h2 class = "postinfo"></h2>
+  </div>
+  </div>
+  {{#if logged_in}}
+{{{body}}}
+{{else}}
+    {{!-- <div class="main">
+  <h2 class = "postinfo"></h2> --}}
    <p class="post_text">Please Log In to see posts</p>
-    <div class = "bottombar">
+    {{!-- <div class = "bottombar">
       <input type ="image" src="../../assets/thumbs up.jpg" name="Upvote Button" class="upvotes" id="upvoteBtn">
       </div>
-    </div>
-  </div>
-  </div>
+    </div> --}}
+{{/if}}
 
 
-  <div class="container2">
-  <div class="post_feed">
-    <h2>Your Feed:</h2>
-  </div>
-  {{!-- {{{body}}} --}}
-  <div class="main">
+
+  {{!-- <div class="main">
   <h2 class = "postinfo"></h2>
    <p class="post_text"></p>
     <div class = "bottombar">
       <input type ="image" src="../../assets/thumbs up.jpg" name="Upvote Button" class="upvotes" id="upvoteBtn">
       </div>
-    </div>
+    </div> --}}
   </div>
 </body>
 </html>
+{{#if logged_in}}
+<script src="/public/js/logout.js"
+{{/if}}
