--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -101,6 +101,7 @@ padding-right: 10px;
   min-width: 20%;
   display: flex;
 }
+
 .container2 {
   padding-left: 20px;
   min-width: 75%;
@@ -147,6 +148,14 @@ border-top: black solid;
   background: #ddd;
 }
 
+.astext {
+
+  background:none;
+  border: none;
+  margin: 0;
+  padding: 0;
+  cursor:pointer;
+}
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
   .row {   
@@ -168,3 +177,4 @@ border-top: black solid;
   width: 100%;
 
 } 
+}
