--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,32 +13,8 @@
       <div class="form-group">
         <button class="btn btn-primary" type="submit">login</button>
       </div>
-    </form>
-  </div>
-  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
-    <form class="form signup-form">
       <div class="form-group">
-        <label for="username-signup">Username:</label>
-        <input class="form-input" type="text" id="username-signup" />
-      </div>
-      <div class="form-group">
-        <label for="email-signup">Email:</label>
-        <input class="form-input" type="text" id="email-signup" />
-      </div>
-      <div class="form-group">
-        <label for="password-signup">Password:</label>
-        <input class="form-input" type="password" id="password-signup" />
-      </div>
-      <div class="form-group">
-        <label for="bio-text" class="col-sm-2 control-label text-warning">Bio:</label>
-        <div class="col-sm-10">
-          <textarea type="text" class="form-control bg-dark text-white" rows="3" id="bio-signup"
-            placeholder="Optional"></textarea>
-        </div>
-      </div>
-      <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <p class="btn btn-primary" type="submit">Don't have an account? <button class="astext">Sign Up</button> here!</p>
       </div>
     </form>
   </div>
