--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -23,8 +23,9 @@
       <li class="pure-menu-item">
         <a href="#" class="pure-menu-link">Profile</a>
       </li>
+      </li>
 {{#if logged_in}}
-    <button class="pure-menu-link pure-menu-heading">Logout</button>
+        <a href="/signup"class="pure-menu-link pure-menu-heading">Logout</a>
 {{else}}
       <a href="/login" class="pure-menu-link pure-menu-heading">Login</a>
 {{/if}}
@@ -54,32 +55,19 @@
   <div class="container2">
   <div class="post_feed">
     <h2>Your Feed:</h2>
-  </div>
-  </div>
-  {{#if logged_in}}
-{{{body}}}
-{{else}}
-    {{!-- <div class="main">
-  <h2 class = "postinfo"></h2> --}}
-   <p class="post_text">Please Log In to see posts</p>
-    {{!-- <div class = "bottombar">
-      <input type ="image" src="../../assets/thumbs up.jpg" name="Upvote Button" class="upvotes" id="upvoteBtn">
-      </div>
-    </div> --}}
-{{/if}}
-
-
-
-  {{!-- <div class="main">
+    <div class="main">
   <h2 class = "postinfo"></h2>
-   <p class="post_text"></p>
+   <p class="post_text">Please Log In to see posts</p>
     <div class = "bottombar">
       <input type ="image" src="../../assets/thumbs up.jpg" name="Upvote Button" class="upvotes" id="upvoteBtn">
       </div>
-    </div> --}}
+    </div>
+  </div>
+  </div>
+{{{body}}}
+
   </div>
 </body>
-</html>
 {{#if logged_in}}
 <script src="/public/js/logout.js"
 {{/if}}
