--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,14 +11,14 @@
         <input class="form-input" type="password" id="password-login" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">login</button>
+        <button class="btn btn-primary" type="submit">Login</button>
       </div>
       <div class="form-group">
-        <p class="btn btn-primary" type="submit">Don't have an account? <button class="astext">Sign Up</button> here!</p>
+        <p class="btn-primary" type="submit">Don't have an account? <a href="/signup" class="astext">Sign Up</a> here!</p>
       </div>
     </form>
   </div>
 </div>
 
 
-<script src="./js/login.js"></script>
+<script src="/js/login.js"></script>
