made the login logout button work and handlebars all work

--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,3 +1,7 @@
+  <div class="container2">
+  <div class="post_feed">
+    <h2>Your Feed:</h2>
+  </div>
 {{#each posts as |post|}}
 <div class="main">
   <h2 class = "postinfo"></h2>
@@ -7,3 +11,4 @@
       </div>
     </div>
 {{/each}}
+  </div>
