--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,8 +24,8 @@
         <a href="#" class="pure-menu-link">Profile</a>
       </li>
       </li>
-{{#if logged_in}}
-        <a href="/signup"class="pure-menu-link pure-menu-heading">Logout</a>
+{{#if loggedIn}}
+        <a href="#" class="pure-menu-link pure-menu-heading" id="logout">Logout</a>
 {{else}}
       <a href="/login" class="pure-menu-link pure-menu-heading">Login</a>
 {{/if}}
@@ -52,22 +52,11 @@
     <div class="fakeimg" style="height:60px;">USC</div>
   </div>
   </div>
-  <div class="container2">
-  <div class="post_feed">
-    <h2>Your Feed:</h2>
-    <div class="main">
-  <h2 class = "postinfo"></h2>
-   <p class="post_text">Please Log In to see posts</p>
-    <div class = "bottombar">
-      <input type ="image" src="../../assets/thumbs up.jpg" name="Upvote Button" class="upvotes" id="upvoteBtn">
-      </div>
-    </div>
-  </div>
-  </div>
+
 {{{body}}}
 
   </div>
 </body>
-{{#if logged_in}}
-<script src="/public/js/logout.js"
+{{#if loggedIn}}
+<script src="/js/logout.js"></script>
 {{/if}}
