--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -42,9 +42,7 @@
   <div class="container1">
   <div class="side">
     <h2>Search Schools</h2>
-    <h5></h5>
-    <div class="fakeimg" style="height:200px;"></div>
-    <p></p>
+        <a href="http://www.smartaddon.com/?share" title="Share Button" onclick="return sa_tellafriend('','bookmarks')"><img alt="Share" src="http://bootflat.github.io/img/share.gif" border="0" /></a>
     <h3></h3>
     <p></p>
     <div class="fakeimg" style="height:60px;">UCR</div><br>
@@ -60,3 +58,12 @@
 {{#if loggedIn}}
 <script src="/js/logout.js"></script>
 {{/if}}
+
+<div class="footer">
+ <h2>Made With Love</h2>  
+ <span>&#9829;</span>
+
+</div>
+
+</body>
+</html>
