--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,8 +1,10 @@
+
+
 <div class="row justify-space-between-md">
-  <div class="login-card">
+  <div class="login">
     <h2 class="page-title">Login</h2>
     <form class="form login-form">
-      <div class="form-group">
+      <div class="form-group1">
         <label for="email-login">Email:</label>
         <input class="form-input" type="text" id="email-login" />
       </div>
