--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,5 @@
  <div class="login-card">
-    <h2 class="page-title">Signup</h2>
+    <h2 class="page-title">Sign Up</h2>
     <form class="form signup-form">
       <div class="form-group">
         <label for="username-signup">Username:</label>
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit">signup</button>
+        <button class="btn btn-primary" type="submit">Sign Up</button>
       </div>
     </form>
   </div>
