--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,10 +18,10 @@
   <div class="navbar pure-menu pure-menu-horizontal pure-menu-scrollable">
     <ul class="pure-menu-list">
       <li class="pure-menu-item">
-        <a href="#" class="pure-menu-link">Home</a>
+        <a href="/" class="pure-menu-link">Home</a>
       </li>
       <li class="pure-menu-item">
-        <a href="#" class="pure-menu-link">Profile</a>
+        <a href="/profile" class="pure-menu-link">Profile</a>
       </li>
       </li>
 {{#if loggedIn}}
@@ -50,10 +50,10 @@
     <div class="fakeimg" style="height:60px;">USC</div>
   </div>
   </div>
-
-{{{body}}}
-
+<div>
+</div>
   </div>
+  {{{body}}}
 </body>
 {{#if loggedIn}}
 <script src="/js/logout.js"></script>
