--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container2">
   <div class="row">
     <div class="col-12">
 {{#if loggedIn}}
@@ -7,9 +7,7 @@
         <button type="submit" class="btn btn-warning" id="btn-post">Post</button>
     </form>
 {{/if}}
-    </div>
-  </div>
-</div>
+    
 
 <div class="container-title">
   <div class="row">
@@ -22,18 +20,19 @@
   </div>
 </div>
 
-<ol class="post-list" style="height: 80vh; overflow-y: scroll">
-<!-- posts array -->
+
 {{#each posts as |post|}}
-  <ul>
-      {{> post-info post }} 
+<div class="main">
+  <h2 class = "postinfo">{{user.username}}</h2>
+   <p class="post_text">{{post.post_text}}</p>
+    <div class = "bottombar">
+      <input type ="image" src="../../assets/thumbs up.jpg" name="Upvote Button" class="upvotes" id="upvoteBtn">
+      </div>
     </div>
-  </ul>
 {{/each}}
-</ol>
-
-
-
+</div>
+  </div>
+</div>
 {{#if loggedIn}}
 <script src="/js/addPost.js"></script>
 <script src="/js/search.js"></script>
