--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,9 +45,9 @@
         <a href="http://www.smartaddon.com/?share" title="Share Button" onclick="return sa_tellafriend('','bookmarks')"><img alt="Share" src="http://bootflat.github.io/img/share.gif" border="0" /></a>
     <h3></h3>
     <p></p>
-    <div class="fakeimg" style="height:60px;"><img src="/" width="50">UCR</div><br>
-    <div class="fakeimg" style="height:60px;"><img src="download.png">UCLA</div><br>
-    <div class="fakeimg" style="height:60px;">USC</div>
+    <div class="fakeimg" style="height 150px;"><img src="/images/download.jpg" width="140"></div><br>
+    <div class="fakeimg" style="height:150px;"><img src="/images/ucla.png" width="127"></div><br>
+    <div class="fakeimg" style="height:150px;"><img src="/images/usc.png" width="170"></div>
   </div>
   </div>
 
