--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -19,7 +19,7 @@ body {
   font-size: 40px;
   padding: 1rem;
   opacity: 90%;
-  background-image: url("/assets/header.png");
+  background-image: url("/images/header.png");
 
 }
 .button {
@@ -34,7 +34,9 @@ body {
   flex-wrap: wrap;
 
 }
+.login {
 
+}
 .btn {
   color: rgb(255, 255, 255);
   background-color: rgb(0, 0, 0);
@@ -111,12 +113,13 @@ padding-right: 10px;
 }
 
 .container2 {
-  padding-left: 20px;
-  min-width: 75%;
-  min-height: 250px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
+  text-align: right;
+position: absolute;
+top: 50%;
+left: 30%;
+width: 100%;
+text-align: left;
+line-height: 3rem;
 }
 
 .postinfo {
@@ -139,13 +142,26 @@ border-top: black solid;
 }
 .login-form {
 text-align: right;
+position: absolute;
+top: 38%;
+left: 20%;
+width: 100%;
+text-align: left;
 line-height: 3rem;
+
 }
 
-.form-group {
+.login-card {
   text-align: right;
-line-height: 3rem;
-}
+  position: absolute;
+  top: 38%;
+  left: 20%;
+  width: 100%;
+  text-align: left;
+  line-height: 3rem;
+  
+  }
+
 
 .upvotes{
   max-width: inherit;
