--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,10 +1,10 @@
 
-
-<div class="row justify-space-between-md">
   <div class="login">
-    <h2 class="page-title">Login</h2>
-    <form class="form login-form">
-      <div class="form-group1">
+    <form class="login-form">  
+      <div class="form-group">  
+                   <h2>Login</h2>
+   
+
         <label for="email-login">Email:</label>
         <input class="form-input" type="text" id="email-login" />
       </div>
