--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -34,9 +34,7 @@ body {
   flex-wrap: wrap;
 
 }
-.login {
 
-}
 .btn {
   color: rgb(255, 255, 255);
   background-color: rgb(0, 0, 0);
@@ -97,13 +95,13 @@ padding-right: 10px;
 .main {   
 
   display: flex;
-  margin: 50px 5px 20px 5px;
-  background-color: rgb(114, 96, 96);
+  margin: 90px 5px 10px 5px;
+  background-color: rgb(181, 159, 159);
   width: 100%;
   min-height: 370px;
   height: fit-content;
   height:fit-content;
-  flex-direction: column;
+  flex-direction:column;
 }
 
 .container1 {
@@ -113,19 +111,19 @@ padding-right: 10px;
 }
 
 .container2 {
-  text-align: right;
+  text-align: center;
 position: absolute;
-top: 50%;
-left: 30%;
+top: 40%;
+left: 20%;
 width: 100%;
-text-align: left;
 line-height: 3rem;
 }
+
 
 .postinfo {
   height: fit-content;
   width: 100%;
-  min-height: 30px;
+  min-height: 9px;
   border-bottom: black solid;
   padding: 0px 0px 10px 10px;
 }
@@ -170,7 +168,7 @@ line-height: 3rem;
 /*ALL FOR HOMEPAGE CSS  */
 
 .fakeimg {
-  background-color: rgb(114, 96, 96);
+  background-color: rgb(175, 165, 165);
   max-width: 80%;
   padding: 20px;
 }
