--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -22,6 +22,7 @@ body {
   background-image: url("/images/header.png");
 
 }
+
 .button {
   background-color: #ce949c;
   border: none;
@@ -32,25 +33,25 @@ body {
   display: inline-block;
   font-size: 16px;
   flex-wrap: wrap;
-
+  
 }
 
 .btn {
   color: rgb(255, 255, 255);
   background-color: rgb(0, 0, 0);
-
+  
 }
- 
+
 .row {  
   display: -ms-flexbox; /* IE10 */
   display: flex; /* IE10 */
   width: 100%;
 }
 .footer h2{
-font-size: 20px;
+  font-size: 20px;
 }
 span {
-text-align: center;
+  text-align: center;
   content: "\2665";
 }
 /* added formatting for content */
@@ -76,24 +77,36 @@ text-align: center;
 }
 
 .navbar2 {
-display:flex;
-justify-content: right;
-align-items: center;
-min-height: 40px;
-background-color: #ce949c;
-padding-right: 10px;
+  display:flex;
+  justify-content: right;
+  align-items: center;
+  min-height: 40px;
+  background-color: #ce949c;
+  padding-right: 10px;
 }
 /* //ADDED IN FOR THE HOMEPAGE CSS */
-
+.new-post-form{
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  height: 70px;
+  width: 500px;
+}
+.btn-warning {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: fit-content;
+}
 .post_feed {
   display: flex;
   height:20px;
   width: 100%;
   justify-content: flex-start;
-  }
+}
 
 .main {   
-
+  
   display: flex;
   margin: 90px 5px 10px 5px;
   background-color: rgb(181, 159, 159);
@@ -112,13 +125,17 @@ padding-right: 10px;
 
 .container2 {
   text-align: center;
-position: absolute;
-top: 40%;
-left: 20%;
-width: 100%;
-line-height: 3rem;
+  position: absolute;
+  width: 100%;
+  line-height: 3rem;
+  display: flex;
+  flex-direction: column;
 }
 
+.content {
+  display: flex;
+  flex-direction: column;
+}
 
 .postinfo {
   height: fit-content;
