--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,5 +1,5 @@
 <div class="container2">
-  <div class="row">
+  <div class="content">
     <div class="col-12">
       <div class="container-title">
   
