--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -27,7 +27,7 @@
   <h2 class = "postinfo">{{user.username}}</h2>
    <p class="post_text">{{post.post_text}}</p>
     <div class = "bottombar">
-      <input type ="image" src="../../assets/thumbs up.jpg" name="Upvote Button" class="upvotes" id="upvoteBtn">
+      <input type ="image" src="/images/thumbsup.png" name="Upvote Button" class="upvotes" id="upvoteBtn">
       </div>
     </div>
 
