--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,3 +1,4 @@
+      <div class="profiledivider">
 <article class="post">
     <div class="post-container">
         <div class="row">
@@ -60,3 +61,4 @@
         </div>
     </div>
 </article>
+      </div>
