--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -27,7 +27,7 @@
   <h2 class = "postinfo">{{user.username}}</h2>
    <p class="post_text">{{post.post_text}}</p>
     <div class = "bottombar">
-      <input type ="image" src="/images/thumbs up.jpg" name="Upvote Button" class="upvotes" id="upvoteBtn">
+      <input type ="image" src="/images/thumbsup.png" name="Upvote Button" class="upvotes" id="upvoteBtn">
       {{#if comments}}
                 <svg class="bi bi-dot" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 </svg>
