--- a/views/partials/profile-card.handlebars
+++ b/views/partials/profile-card.handlebars
@@ -2,9 +2,11 @@
   
   <div class="card bg-dark" id="profile-card">
     <div class="card-body bg-dark" id="profile-card-body">
-      <h4 class="card-title bg-dark" id="profile-card-username">{{ username }}</h4>
-      <p class="card-text bg-dark" id="profile-card-bio">{{ bio }}</p>
-      <a href="mailto:{{ email }}" class="card-link bg-dark" id="profile-card-email">Email: {{ email }}</a>
+      <h4 class="card-title bg-dark" id="profile-card-username">Your Username:</h4>
+      <p> {{username}}</p>
+      <h4 class="card-text bg-dark" id="profile-card-bio">Your Bio:  </h4>
+      <p class="bio">{{ bio }}</p>
+      <h4 class="card-link bg-dark" id="profile-card-email">Email: <a href="mailto:{{ email }}" > {{ email }}</a></h4>
     </div>
   </div>
 
