--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,3 +1,5 @@
+<div class="container3">
+
 {{#each users}}
   {{> profile-card}}
 {{/each}}
@@ -14,6 +16,8 @@
   
   <div>
     <ol class="profile-list">
+
+
       {{#each posts}}
       <li>
         {{> post-info}}
@@ -23,3 +27,4 @@
   </div>
 </section>
 {{/if}}
+</div>
