--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,5 +1,7 @@
  <div class="login-card">
-    <h2 class="page-title">Sign Up</h2>
+    <h2 class="page-title">Sign Up</h2>   
+       <form class="form signup-form">
+
       <div class="form-group">
         <label for="username-signup">Username:</label>
         <input class="form-input" type="text" id="username-signup" />
