--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -26,19 +26,18 @@
     {{#each posts as |post|}}
     <div class="main">
       <h2 class="postinfo">{{user.username}}</h2>
-      <p class="post_text">{{post.post_text}}</p>
+      <p class="post_text">{{post.post_text}}{{comment.comment_text}}</p>
       <div class="bottombar">
         <input type="image" src="/images/thumbsup.png" name="Upvote Button" class="upvotes" id="upvoteBtn">
         {{#if comments}}
         <svg class="bi bi-dot" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
           xmlns="http://www.w3.org/2000/svg">
         </svg>
-        <a class="btn text-warning" id="view-comment-btn" data-toggle="collapse" href="#collapseExample" role="button"
-          aria-expanded="false" aria-controls="collapseExample">View Comments</a>
+        {{!-- <a class="btn text-warning" id="view-comment-btn" data-toggle="collapse" href="#collapseExample" role="button"
+          aria-expanded="false" aria-controls="collapseExample">View Comments</a> --}}
         <div class="collapse" id="collapseExample">
           <div class="card-comments card-body">
             <div class="overflow-auto">
-              {{> comments comments}}
 
             </div>
 
@@ -52,9 +51,11 @@
     </div>
     {{/if }}
     <form class="new-post-form">
-      <input type="text" class="form-control form-control2 bg-dark text-white" id="post-input" name="post-text"
+      <input type="text" class="form-control form-control2 bg-dark text-white" id="comment-input" name="comment-body"
         placeholder="Add comment" />
       <button type="submit" class="btn btn-warning" id="btn-post">Reply</button>
+      {{> comments comments}}
+
     </form>
 
 
