--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -11,8 +11,11 @@ body {
   padding: .4px;
   width: 100%;
   text-align: center;
-  color: rgb(122, 76, 76);
+  color: rgb(167, 74, 74);
+  background: linear-gradient(to right, rgb(217, 158, 158) 0%, rgb(202, 110, 202) 100%);
+  size: 10vw;
   font-style: oblique;
+  font-family:sans-serif;
 }
 
 .header h1 {
@@ -22,6 +25,8 @@ body {
   background-image: url("/images/header.png");
 
 }
+.left-background {background-color:#be9191; width: 4px; height:190%; position:absolute; top: -1.8rem; left: 560px;}
+.content {position:relative; margin:0 auto 0 auto; width:400px; right:29%; background-color:#ffffff;}
 
 .button {
   background-color: #ce949c;
@@ -61,11 +66,6 @@ span {
 
 }
 
-.sidebar {
-  background-color: paleturquoise;
-  max-width: 15%;
-  display: flex;
-}
 /* ADDED CSS FOR NAVBARS */
 .navbar {
   display:flex;
@@ -79,6 +79,10 @@ span {
 .navbar a{
   font-weight: bold;
   color: black;
+}
+.profile-card-username {
+  text-emphasis-color: red;
+
 }
 
 .navbar2 {
@@ -122,7 +126,7 @@ span {
 .main {   
   display: flex;
   margin: 90px 5px 10px 5px;
-  background-color: rgb(181, 159, 159);
+  background-color: rgb(235, 220, 245);
   width: 100%;
   min-height: 320px;
   height: fit-content;
@@ -132,6 +136,8 @@ span {
 .container1 {
   min-width: 15%;
   display: flex;
+  border-left: solid rgb(161, 139, 139);
+  padding: 60px;
 }
 
 .container2 {
@@ -140,8 +146,8 @@ span {
   line-height: 3rem;
   display: flex;
   flex-direction: column;
-  border-left: solid grey;
-  padding: 40px;
+  border-left: solid rgb(161, 139, 139);
+  padding: 30px;
 }
 
 .container3 {
@@ -153,23 +159,54 @@ span {
   border-left: solid grey;
   padding: 40px;
 }
+.container5 {
+background-color: rgb(249, 241, 241);
+}
+.profile {
+  display: flex;
+  align-items: center;
+  letter-spacing: 1px;
+  text-indent: 40px;
 
-.content {
+}
+
+.profile img {
+  width: min(30vw, 120px);
+  border-radius: min(30vw, 110px);
+  flex-shrink: 0;
+}
+
+.profile figcaption {
+  font-size: 1.2rem;
+  font-size: clamp(1.2rem, 3vw, 1.5rem);
+  padding: 0.5rem 1rem;
+}
+
+p strong {
+  font-size: 1.8rem;
+  font-size: clamp(1.8rem, 5vw, 2.5rem);
+  font-family: "Halant";
+  line-height: 1.1;
+}
+
+
+
+/* .content {
   display: flex;
   flex-direction: column;
-  max-width: 80%;
-}
+  max-width: 30%;
+} */
 
 .postinfo {
   height: fit-content;
   width: 100%;
-  min-height: 9px;
+  min-height: 3px;
   border-bottom: black solid;
   padding: 0px 0px 10px 10px;
 }
 
 .post_text{ 
-  min-height: 130px;
+  min-height: 78px;
 }
 .bottombar {
 display:flex;
@@ -209,17 +246,11 @@ line-height: 3rem;
 /*ALL FOR HOMEPAGE CSS  */
 
 .fakeimg {
-  background-color: rgb(175, 165, 165);
+  background-color: rgb(233, 205, 205);
   max-width: 80%;
   padding: 20px;
 }
 
-.footer {
-  text-align: center;
-  background: rgb(249, 198, 248);
-  line-height: 3rem;
-
-}
 
 .profile-list {
   background-color: azure;
@@ -228,14 +259,14 @@ line-height: 3rem;
   display: inline-block;
   width: auto;
   border-style: solid;
-  border-color: gray;
+  border-color: rgb(210, 181, 181);
   border-width: 1px;
   padding: 5px 10px 10px 5px;
   
 }
 
 .profiledivider {
-  border-bottom: grey 1px solid;
+  border-bottom: rgb(228, 193, 193) 1px solid;
 }
 .astext {
   text-decoration: underline;
