--- a/views/partials/profile-card.handlebars
+++ b/views/partials/profile-card.handlebars
@@ -1,7 +1,11 @@
-<div class="card-container bg-dark" id="profile-card-container">
-  
+
+<div class="container5">
+<div class="profile">
   <div class="card bg-dark" id="profile-card">
-    <div class="card-body bg-dark" id="profile-card-body">
+    <div class="profile" class="card-body bg-dark" id="profile-card-body">
+      <figure class="profile">
+  <img src="/images/header.png" alt="Profile shot of Janae Randolph" />
+</figure>
       <h4 class="card-title bg-dark" id="profile-card-username">Your Username:</h4>
       <p> {{username}}</p>
       <h4 class="card-text bg-dark" id="profile-card-bio">Your Bio:  </h4>
@@ -9,5 +13,7 @@
       <h4 class="card-link bg-dark" id="profile-card-email">Email: <a href="mailto:{{ email }}" > {{ email }}</a></h4>
     </div>
   </div>
+    </div>
+
 
 </div>
