--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -33,7 +33,7 @@
         <svg class="bi bi-dot" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
           xmlns="http://www.w3.org/2000/svg">
         </svg>
-        <a id="view-comment-btn" data-toggle="collapse" href="#collapseExample" role="button">View Comments</a>
+        {{!-- <a id="view-comment-btn" data-toggle="collapse" href="#collapseExample" role="button">View Comments</a> --}}
         <div class="collapse" id="collapseExample">
           <div class="card-comments card-body">
             <div class="overflow-auto">
@@ -49,8 +49,8 @@
 <div class="left-background"></div>
     </div>
     {{/if }}
-    <form class="new-post-form">
-      <input type="text" class="form-control form-control2 bg-dark text-white" id="post-input" name="post-text"
+    <form class="comment-form">
+      <input type="text" class="form-control form-control2 bg-dark text-white" id="post-input" name="comment-body"
         placeholder="Add comment" />
       <button type="submit" class="btn btn-warning" id="btn-post">Reply</button>
     </form>
@@ -67,6 +67,6 @@
 </div> --}}
 {{#if loggedIn}}
 <script src="/js/addPost.js"></script>
-<script src="/js/search.js"></script>
+<script src="/js/comment.js"></script>
 
 {{/if}}
