--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,10 +32,10 @@
     </ul>
     </header>
   </div>
-  <div class="navbar2 button">
+  {{!-- <div class="navbar2 button">
     <input type="text" class="form-control search-query">
     <span class="input-group-btn">
-      <button class="btn">Search</button>
+      <button class="btn">Search</button> --}}
   </span>
 </div>
 <div class="row">
