--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,8 +25,7 @@ body {
   background-image: url("/images/header.png");
 
 }
-.left-background {background-color:#be9191; width: 4px; height:190%; position:absolute; top: -1.8rem; left: 560px;}
-.content {position:relative; margin:0 auto 0 auto; width:400px; right:29%; background-color:#ffffff;}
+.content {position:relative; margin:0 auto 0 auto; width:400px; right:20%; background-color:#ffffff;}
 
 .button {
   background-color: #ce949c;
@@ -82,6 +81,7 @@ span {
 }
 .profile-card-username {
   text-emphasis-color: red;
+
 
 }
 
@@ -142,11 +142,14 @@ span {
 
 .container2 {
   position: absolute;
-  width: 100%;
+  right: -100%;
+  width: 160%;
   line-height: 3rem;
   display: flex;
   flex-direction: column;
-  border-left: solid rgb(161, 139, 139);
+  border-left: solid rgb(214, 162, 162);
+  border-right: solid rgb(214, 162, 162);
+
   padding: 30px;
 }
 
